--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <meta name="Author" content="A9FM">
     <meta name="Copyright" content="A9FM">
     <link rel="shortcut icon" href="assets/favico/ico.png" type="image/png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Tektur:wght@400..900&display=swap" rel="stylesheet">
     <style>
         :root {
             --main-color: #ff3b6d;
@@ -349,7 +352,7 @@
         </div>
 
         <div class="section">
-            <h2>> С каким ОС работал <</h2>
+            <h2>> Работал с <</h2>
             <div class="tech-stack">
                 <span class="tech-item">Debian</span>
                 <span class="tech-item">Ubuntu</span>
