--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <html>
         
-<meta http-equiv="refresh" content="1;https://a9fmofficial.github.io/">
+<meta http-equiv="refresh" content="1;https://a9fm.site/">
         
 <head>
 <meta charset="UTF-8">
