--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
             <a href="tg://resolve?domain=roblox_offline" class="btn"><i class="fab fa-telegram"></i> Roblox Offline</a>
             <a href="https://www.tiktok.com/@a9fm.official" class="btn"><i class="fab fa-tiktok"></i> TikTok</a>
             <a href="https://www.youtube.com/channel/UCl5P2stynkIvV8bsUdaRB6A" class="btn"><i class="fab fa-youtube"></i> YouTube</a>
-            <a href="https://github.com/a9fmofficial" class="btn"><i class="fab fa-github"></i> GitHub</a>
+            <a href="https://github.com/a9-fm" class="btn"><i class="fab fa-github"></i> GitHub</a>
             <a href="http://last.fm/user/a9fmTop" class="btn"><i class="fab fa-lastfm"></i> Last.fm</a>
         </div>
 
@@ -393,7 +393,7 @@
             </div>
 
             <div class="project">
-                <a href="https://github.com/a9fmofficial/MSWT"><h3>MSWT</h3></a>
+                <a href="https://github.com/a9-fm/MSWT"><h3>MSWT</h3></a>
                 <p>Manage Server With Telegram</p>
                 <div class="tags">
                     <span class="tag">Python</span>
