--- a/index.html
+++ b/index.html
@@ -329,11 +329,14 @@
 
         <div class="buttons">
             <a href="tg://resolve?domain=a9_fm" class="btn"><i class="fab fa-telegram"></i> Telegram</a>
-            <a href="tg://resolve?domain=roblox_offline" class="btn"><i class="fab fa-telegram"></i> Roblox Offline</a>
+            <a href="https://ovk.to/a9fm" class="btn"><i class="fab fa-vk"></i> oVK</a>
+            <a href="https://discord.com/users/513694176613892097" class="btn"><i class="fab fa-discord"></i> Discord</a>
             <a href="https://www.tiktok.com/@a9fm.official" class="btn"><i class="fab fa-tiktok"></i> TikTok</a>
-            <a href="https://www.youtube.com/channel/UCl5P2stynkIvV8bsUdaRB6A" class="btn"><i class="fab fa-youtube"></i> YouTube</a>
             <a href="https://github.com/a9-fm" class="btn"><i class="fab fa-github"></i> GitHub</a>
-            <a href="http://last.fm/user/a9fmTop" class="btn"><i class="fab fa-lastfm"></i> Last.fm</a>
+            <a href="https://www.youtube.com/channel/UCl5P2stynkIvV8bsUdaRB6A" class="btn"><i class="fab fa-youtube"></i> YouTube</a>
+            <a href="https://last.fm/user/a9fmTop" class="btn"><i class="fab fa-lastfm"></i> Last.fm</a>
+            <a href="https://anixartapp.com/profile/1876789" class="btn"><i class="fas fa-film"></i> Anixart</a>
+            <a href="tg://resolve?domain=roblox_offline" class="btn"><i class="fab fa-telegram"></i> Roblox Offline</a>
         </div>
 
         <div class="section">
